--- a/taskly-app/src/styles/authentication/change-password-style.scss
+++ b/taskly-app/src/styles/authentication/change-password-style.scss
@@ -1,10 +1,9 @@
 @use '../general/general-style.scss' as *;
 
-.final-register-page-container {
-    width: 100%;
+.change-password-container {
+    width: 300px;
     height: auto;
-    min-height: 200px;
-    position: relative;
+    min-height: 250px;
     padding: 10px;
     box-sizing: border-box;
 
