--- a/taskly-app/src/styles/general/general-style.scss
+++ b/taskly-app/src/styles/general/general-style.scss
@@ -15,9 +15,17 @@
     &:hover {
         background-color: #004ab9;
     }
+}
 
+@mixin defaultInput() {
+    font-size: 21px;
+    border: 1px solid black;
+    border-radius: 3px;
+    outline: none;
+    box-sizing: border-box;
+    margin-bottom: 5px;
 
-
-
-
+    &:focus {
+        border: 2px solid #0052CC;
+    }
 }
