--- a/taskly-app/src/styles/general/input-message-style.scss
+++ b/taskly-app/src/styles/general/input-message-style.scss
@@ -1,6 +1,7 @@
 .input-message {
     text-align: start;
-    font-size: 21px;
+    font-size: 17px;
+    font-weight: bold;
     margin: 0;
     padding: 0;
 }
