--- a/taskly-app/src/styles/general/not-found-style.scss
+++ b/taskly-app/src/styles/general/not-found-style.scss
@@ -6,8 +6,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #f0f8ff;
-  color: #333;
+  color: #f0f8ff;
   font-family: Roboto , sans-serif;
   font-weight: 500;
 
