--- a/taskly-app/src/styles/authentication/login-style.scss
+++ b/taskly-app/src/styles/authentication/login-style.scss
@@ -4,8 +4,6 @@
 .login-conatainer {
     display: flex;
     flex-direction: column;
-    width: 300px;
-    height: auto;
     box-sizing: border-box;
 
 
@@ -90,7 +88,7 @@
 
         a {
             font-size: 17px;
-            color: #120efa;
+            color: #ffffff;
             text-decoration: none;
 
             &:hover {
