Add menu container

--- a/taskly-app/src/styles/authentication/login-style.scss
+++ b/taskly-app/src/styles/authentication/login-style.scss
@@ -104,6 +104,7 @@
 
             #remember-me {
                 width: 20px;
+                cursor: pointer;
             }
 
             label {
