--- a/taskly-app/src/styles/user/dashboard-style.scss
+++ b/taskly-app/src/styles/user/dashboard-style.scss
@@ -5,5 +5,9 @@
     flex-direction: column;
     row-gap: 30px;
     box-sizing: border-box;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
 
 }
