--- a/taskly-app/src/styles/general/general-style.scss
+++ b/taskly-app/src/styles/general/general-style.scss
@@ -14,6 +14,12 @@
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     transition: background-color 0.3s ease;
 
+    a {
+        color: white;
+        text-decoration: none;
+
+    }
+
     &:hover {
         background-color: #004ab9;
     }
@@ -32,5 +38,25 @@
     &:focus {
         border-color: #0052CC;
         box-shadow: 0 0 4px rgba(0, 82, 204, 0.5);
+    }
+}
+
+@mixin menuItem() {
+    min-width: max-content;
+    max-height: max-content;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    text-decoration: none;
+    color: white;
+
+    cursor: pointer;
+
+    &:hover {
+        color: #4a00e0;
+        //background-color: rgb(219, 227, 235);
     }
 }
