--- a/taskly-app/src/styles/general/menu-container-style.scss
+++ b/taskly-app/src/styles/general/menu-container-style.scss
@@ -14,13 +14,50 @@
     }
 }
 
+@media screen and (min-width:1200px) {
+    .menu-item {
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width:1000px) and (max-width:1200px) {
+    .menu-item {
+        font-size: 18px;
+        font-weight: bold;
+    }
+}
+
+@media screen and (max-width: 999px) {
+    .menu-item {
+        font-size: 15px;
+        font-weight: bold;
+    }
+
+    .menu-authentication-buttons {
+        width: auto;
+        display: flex;
+        column-gap: 10px;
+        margin-left: auto;
+
+        button {
+            @include defaultButton(50px, 15px)
+        }
+
+    }
+
+    .hiden-menu-icon {
+        width: 30px;
+        height: 30px;
+    }
+
+}
+
 .menu-container {
     width: 100%;
-    height: 10%;
-    position: sticky;
+    height: 100px;
     display: flex;
     align-items: center;
-    background-color: aliceblue;
+    background-color: rgba(255, 255, 255, 0.1);
 
     column-gap: 35px;
     box-sizing: border-box;
@@ -30,80 +67,37 @@
 
 
     .menu-container-icon {
-        width: 100px;
-        height: 100%;
+        width: 70px;
+        height: 70%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 
         img {
-            width: 100px;
+            width: 70px;
             height: 100%;
+            cursor: pointer;
         }
     }
 
     .menu-container-items {
-        //width: auto;
         width: 90%;
         height: 100%;
         display: flex;
+        color: white;
         justify-content: center;
         align-items: center;
         column-gap: 20px;
         overflow-x: hidden;
         flex-grow: 1;
 
-
-
         .menu-item {
-            width: auto;
-            min-width: max-content;
-            max-height: max-content;
-            background-color: aliceblue;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            box-sizing: border-box;
-            overflow-x: hidden;
-            text-decoration: none;
-
-            cursor: pointer;
-
-            &:hover {
-                color: rgb(179, 185, 192);
-                //background-color: rgb(219, 227, 235);
-            }
+            @include menuItem();
         }
 
-        @media screen and (min-width:1200px) {
-            .menu-item {
-                font-size: 20px;
-            }
-        }
 
-        @media screen and (min-width:1000px) and (max-width:1200px) {
-            .menu-item {
-                font-size: 18px;
-                //font-weight: 900;
-            }
-        }
 
-        @media screen and (max-width: 999px) {
-            .menu-item {
-                font-size: 15px;
-                font-weight: bold;
-            }
 
-            .menu-authentication-buttons {
-                width: auto;
-                display: flex;
-                column-gap: 10px;
-                margin-left: auto;
-
-                button {
-                    @include defaultButton(50px, 15px)
-                }
-
-            }
-        }
 
     }
 
@@ -114,21 +108,13 @@
         margin-left: auto;
 
         button {
-            @include defaultButton(100px, 21px)
+            @include defaultButton(100px, 21px);
+
+
         }
 
     }
 
-    @media screen and (max-width: 999px) {
-
-        .menu-authentication-buttons {
-            button {
-                @include defaultButton(80px, 15px);
-                font-weight: 600;
-            }
-
-        }
-    }
 
     .hiden-menu-icon {
         width: 50px;
@@ -146,18 +132,9 @@
         }
 
 
-        &:hover {
-            background-color: rgb(219, 227, 235);
-        }
+
 
     }
 
-    @media screen and (max-width: 999px) {
-
-        .hiden-menu-icon {
-            width: 30px;
-            height: 30px;
-        }
-    }
 
 }
