--- a/taskly-app/src/styles/general/general-style.scss
+++ b/taskly-app/src/styles/general/general-style.scss
@@ -56,7 +56,7 @@
     cursor: pointer;
 
     &:hover {
-        color: #4a00e0;
+        color: #827a8e;
         //background-color: rgb(219, 227, 235);
     }
 }
