--- a/taskly-app/src/styles/general/general-style.scss
+++ b/taskly-app/src/styles/general/general-style.scss
@@ -1,6 +1,7 @@
 @mixin defaultButton($buttonWidth, $font_size) {
     width: $buttonWidth;
     font-size: $font_size;
+    font-weight: bold;
     border: none;
     border-radius: 5px;
     outline: none;
