--- a/taskly-app/src/App.css
+++ b/taskly-app/src/App.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600;700&display=swap');
+
+* {
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+
+
 #root {
   width: 100%;
   height: 100%;
