--- a/taskly-app/src/styles/general/menu-container-style.scss
+++ b/taskly-app/src/styles/general/menu-container-style.scss
@@ -73,8 +73,8 @@
         align-items: center;
 
         img {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             cursor: pointer;
         }
     }
@@ -89,6 +89,7 @@
         column-gap: 20px;
         overflow-x: hidden;
         flex-grow: 1;
+        font-weight: bold;
 
         .menu-item {
             @include menuItem();
