--- a/taskly-app/src/index.css
+++ b/taskly-app/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: "Arial, Helvetica, sans-serif";
+
+  font-family: Arial, Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
