--- a/taskly-app/src/styles/general/menu-container-style.scss
+++ b/taskly-app/src/styles/general/menu-container-style.scss
@@ -77,6 +77,14 @@
             height: 40px;
             cursor: pointer;
         }
+
+        p {
+            font-size: 20px;
+            font-weight: bold;
+            margin: 0;
+            margin-top: 15px;
+            margin-left: -7px;
+        }
     }
 
     .menu-container-items {
