--- a/taskly-app/src/styles/board/board-page-style.scss
+++ b/taskly-app/src/styles/board/board-page-style.scss
@@ -45,6 +45,7 @@
                     background-color: azure;
                     box-sizing: border-box;
                     row-gap: 10px;
+                    position: relative;
 
                     p {
                         width: 100%;
@@ -53,7 +54,7 @@
                         margin: 0;
                     }
 
-                    div {
+                    div.card-information {
                         width: 100%;
                         display: flex;
 
@@ -65,28 +66,36 @@
                             color: white;
                         }
 
-                        button {
-                            display: inline-block;
-                            width: 30px;
-                            height: 30px;
-                            padding: 5px;
-                            border-radius: 10px;
-                            box-sizing: border-box;
-                            outline: none;
-                            border: none;
-                            background-color: azure;
+                        .card-settings-buttons {
                             margin-left: auto;
+                            display: flex;
+                            box-sizing: content-box;
 
-                            &:hover {
-                                background-color: rgb(205, 223, 223);
-                            }
+                            button {
+                                display: inline-block;
+                                width: 30px;
+                                height: 30px;
+                                padding: 5px;
+                                border-radius: 10px;
+                                box-sizing: border-box;
+                                outline: none;
+                                border: none;
+                                background-color: azure;
 
-                            img {
-                                width: 100%;
-                                height: 100%;
-                                align-self: center;
+                                &:hover {
+                                    background-color: rgb(205, 223, 223);
+                                }
+
+
+                                img {
+                                    width: 100%;
+                                    height: 100%;
+                                    align-self: center;
+                                }
                             }
                         }
+
+
 
                     }
 
