--- a/taskly-app/src/styles/general/general-style.scss
+++ b/taskly-app/src/styles/general/general-style.scss
@@ -61,3 +61,8 @@
         //background-color: rgb(219, 227, 235);
     }
 }
+
+.gradient-text {
+    color: white;
+    text-shadow: 0 0 10px rgba(255, 255, 255, 0.6), 0 0 20px rgba(255, 255, 255, 0.4);
+}
