--- a/taskly-app/src/styles/general/main-container-style.scss
+++ b/taskly-app/src/styles/general/main-container-style.scss
@@ -4,6 +4,7 @@
   min-height: 100vh;
   width: 100%;
   background: linear-gradient(135deg, #8e2de2, #4a00e0);
+  font-family: "Inter", sans-serif;
   color: white;
 
   .main-content {
