--- a/taskly-app/src/styles/board/board-page-style.scss
+++ b/taskly-app/src/styles/board/board-page-style.scss
@@ -27,7 +27,7 @@
             border-radius: 10px;
             flex-direction: column;
             padding: 10px;
-
+            overflow-x: visible;
 
             .card-list-cards {
                 width: 400px;
@@ -82,6 +82,7 @@
                         width: 100%;
                         height: 40px;
                         display: flex;
+                        align-items: center;
 
                         .card-deadline {
                             width: max-content;
@@ -151,9 +152,11 @@
                             }
                         }
 
+
+
                         .creator-of-card {
                             margin-left: auto;
-                            position: relative;
+                            //position: relative;
 
                             img {
                                 width: 40px;
@@ -175,11 +178,35 @@
                                 border-radius: 10px;
                                 padding: 5px 10px;
                                 box-sizing: border-box;
-                                position: absolute;
+                                //position: fixed;
+
                             }
                         }
 
+                        .take-card {
+                            margin-left: auto;
 
+                            button {
+                                width: 30px;
+                                height: 30px;
+                                outline: none;
+                                border-radius: 30px;
+                                padding: 5px;
+                                border: 1px solid gray;
+                                background-color: white;
+                                box-sizing: border-box;
+
+                                &:hover {
+                                    border-style: dashed;
+                                }
+
+                                img {
+                                    width: 100%;
+                                    height: 100%;
+                                    border-radius: 30px;
+                                }
+                            }
+                        }
 
 
                     }
