implement add member to board

--- a/taskly-app/src/styles/table/main.scss
+++ b/taskly-app/src/styles/table/main.scss
@@ -7,3 +7,4 @@
 @import "components/table-page";
 @import "components/tables-list";
 @import "components/create-table-page";
+@import "components/add-member-to-table";
