--- a/taskly-app/src/styles/ai/ai-main-style.scss
+++ b/taskly-app/src/styles/ai/ai-main-style.scss
@@ -21,7 +21,9 @@
   }
 
   @media (max-width: 768px) {
-    .gradient-text, .ai-subtitle {
+
+    .gradient-text,
+    .ai-subtitle {
       display: none;
     }
   }
@@ -33,7 +35,8 @@
   align-items: center;
   justify-content: center;
   width: 100vw;
-  height: 100vh;
+  //height: 100vh;
+  flex-grow: 1;
   padding: 20px;
   color: white;
   overflow: hidden;
@@ -163,8 +166,13 @@
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .code-block {
@@ -233,14 +241,17 @@
     opacity: 0;
     transform: translateY(-10px);
   }
+
   20% {
     opacity: 1;
     transform: translateY(0);
   }
+
   80% {
     opacity: 1;
     transform: translateY(0);
   }
+
   100% {
     opacity: 0;
     transform: translateY(-10px);
