--- a/taskly-app/src/styles/board/board-page-style.scss
+++ b/taskly-app/src/styles/board/board-page-style.scss
@@ -1,10 +1,10 @@
 .board-page-container {
     width: 70%;
-    height: 100%;
+    height: 89%;
     margin: auto;
     padding: 20px;
     overflow-y: hidden;
-    overflow-x: scroll;
+    box-sizing: border-box;
 
     p {
         margin: 0;
