--- a/taskly-app/src/styles/board/boards-page-style.scss
+++ b/taskly-app/src/styles/board/boards-page-style.scss
@@ -12,7 +12,8 @@
 
 .boards-container {
     width: 70%;
-    height: 100%;
+    //height: 100%;
+    flex-grow: 1;
     margin: auto;
     display: flex;
     flex-direction: column;
