--- a/taskly-app/src/styles/general/main-page-style.scss
+++ b/taskly-app/src/styles/general/main-page-style.scss
@@ -4,7 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100vh;
+  flex-grow: 1;
   padding: 0 5%;
 
   .text-content {
