--- a/taskly-app/src/styles/table/main.scss
+++ b/taskly-app/src/styles/table/main.scss
@@ -8,3 +8,4 @@
 @import "components/tables-list";
 @import "components/create-table-page";
 @import "components/add-member-to-table";
+@import "components/list_of_members_in_table";
